fix(slider): ensure no overlap with compass indicator
Fixes #275

--- a/styles/SliderComponent.css
+++ b/styles/SliderComponent.css
@@ -2,9 +2,6 @@
     position: absolute;
     bottom: 40px;
     height: 30px;
-    width: 405px;
-    max-width: 80%;
-    min-width: 271px;
     left: 50%;
     padding-left: 5px;
     pointer-events: none;
